--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,6 @@ classifiers =
 packages = find:
 python_requires = >= 3.7
 install_requires =
-	python_magic == 0.4.25
-	requests == 2.26.0
-	requests_toolbelt == 0.9.1
+	python_magic
+	requests
+	requests_toolbelt
