--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = messenger-api-python
-version = 2023.12.15-post1
+version = 2024.03.17
 author = krishna2206
 author_email = fitiavana.krishna@gmail.com
 description = Python wrapper to the various APIs in Facebook Messenger Platform
